- Currently the search field is a bit too long on other browsers not Chrome. Fix by having a fixed width on input. - On Safari, setting border: 0 is not enough, need to use -webkit-appearance trick. - Make input bottom border aligned with the label

--- a/css/main.css
+++ b/css/main.css
@@ -97,13 +97,19 @@ a {
 
 #searchBox {
   display: inline-block;
+  width: 200px;
   background: white;
   border: none;
   font-family: inherit;
   font-size: inherit;
   color: black;
-  padding: 0 12px;
+  margin: 0 10px;
   border-bottom: 1px solid black;
+  -webkit-appearance: textfield;
+}
+
+#searchBox::-webkit-search-decoration {
+  -webkit-appearance: none;
 }
 
 /* home page */
